--- a/templates/product/edit_product.html
+++ b/templates/product/edit_product.html
@@ -4,10 +4,10 @@ Products View
 {% endblock title%}
 {% block navigation_bar %}
     <li>
-        <a class="btn btn-app" href="{{ redirect_url }}"><i class="fa fa-bar-chart"></i>Cancel</a>
+        <a class="btn btn-app" href="{{ redirect_url }}"><i class="fa fa-close"></i>Cancel</a>
     </li>
     <li>
-        <a onclick="save_current_product('{{project_id}}', '{{product_id}}')" class="btn btn-app" ><i class="fa fa-bar-chart"></i>Save</a>
+        <a onclick="save_current_product('{{project_id}}', '{{product_id}}')" class="btn btn-app" ><i class="fa fa-save"></i>Save</a>
     </li>
 {% endblock %}
 {% block breadcrumbs %}
