--- a/templates/monitoring/monitoring_view_flat.html
+++ b/templates/monitoring/monitoring_view_flat.html
@@ -1,79 +1,67 @@
-{% extends 'base.html' %}
-{% block add_scripts %}
-<script src="/static/js/common.js"></script>
-<script src="/static/js/monitoring_view_callbacks.js"></script>
-<link rel="stylesheet" type="text/css" href="/static/styles/monitoring_view.css">
-{% endblock %}
-{% block menu_entities %}
-    {% include 'menu_entities.html'  %}
-{% endblock %}
-{% block horizontal_pane %}
-    <div class="button-grp-horizontal">
-        <p class="left">{{ current_user }}</p>
-    </div>
+{% extends 'base_site.html' %}
+{% block title %}
+Edit Monitoring
+{% endblock title%}
+{% block stylesheets %}
+{% endblock stylesheets %}
+{% block navigation_bar %}
+<li>
+    <a class="btn btn-app" href="{{ back_url }}"><i class="fa fa-arrow-left"></i>Back</a>
+</li>
 {% endblock %}
 {% block breadcrumbs %}
-    {% include 'breadcrumbs_list.html' %}
+    {% include 'breadcrumb_list_new.html' %}
 {% endblock %}
-{% block page_content %}
-
-    {% if not monitoring_products %}
-        NO ENTITIES CREATED
-    {% else %}
-        <table id="monitored_products" class="display" style="width:100%">
-            <thead>
-                <tr>
-                    <th>Product</th>
-                    {% if seller_self_id %}
-                    <th>Seller Self</th>
-                    {% endif %}
-                    {% for _, seller in monitoring_sellers %}
-                    <th>{{ seller.name }}</th>
-                    {% endfor %}
-                </tr>
-            </thead>
-            <tbody>
-            {% set redirect_url = url_for(request.endpoint, project_id=project_id, monitoring_id=monitoring_id)%}
-            {% for _, product in monitoring_products %}
-                <tr>
-                    <td>{{ product.name }}</td>
-                    {% if seller_self_id %}
-                    <td>
+{% block content %}
+<div class="row">
+    <div class="col-xs-12">
+        <div class="box box-primary">
+            <div class="box-body">
+            {% if not monitoring_products %}
+                NO ENTITIES CREATED
+            {% else %}
+                <table id="monitored_products" class="table table-bordered table-striped text-center">
+                    <thead>
+                        <tr>
+                        <th>Product</th>
+                        {% if seller_self_id %}
+                        <th>Seller Self</th>
+                        {% endif %}
+                        {% for _, seller in monitoring_sellers %}
+                        <th>{{ seller.name }}</th>
+                        {% endfor %}
+                        </tr>
+                    </thead>
+                    <tbody>
+                    {% set redirect_url = url_for(request.endpoint, project_id=project_id, monitoring_id=monitoring_id)%}
+                    {% for _, product in monitoring_products %}
+                        <tr>
+                        <td>{{ product.name }}</td>
+                        {% if seller_self_id %}
+                        <td>
                         {% set self_object_defined = pids_to_sids.get(product.id) and seller_self_id in pids_to_sids.get(product.id) %}
-                        <button id="setup_seller_self{{product.id}}"
-                                 onclick="window.location.href =
-                                 '{{ url_for('monitorings.edit_monitoring_object', project_id=project_id, monitoring_id=monitoring_id, product_id=product.id, seller_id=seller_self_id) }}';">
-                        {% if self_object_defined %}
-                            Edit
-                        {% else %}
-                            Create
+                            <a id="setup_seller_self{{product.id}}" class="btn btn-app"
+                            onclick="window.location.href =
+                            '{{ url_for('monitorings.edit_monitoring_object', project_id=project_id, monitoring_id=monitoring_id, product_id=product.id, seller_id=seller_self_id) }}';"
+                            ><i class="fa fa-cogs"></i>{% if self_object_defined %}Edit{% else %}Create{% endif %}</a>
+                            {% if self_object_defined  %}
+                                <a id="remove_seller_self{{seller_self_id}}" class="btn btn-app"
+                                onclick="remove_mon_object({{project_id}},{{monitoring_id}},{{seller_self_id}}, {{product.id}}, '{{product.name}}', 'self', '{{remove_url}}', '{{redirect_url}}')"
+                                ><i class="fa fa-trash"></i>Delete</a>
+                            {% endif %}
+                        </td>
                         {% endif %}
-                    </button>
-                        {% if self_object_defined  %}
-                        <button id="remove_seller_self{{seller_self_id}}"
-                                 onclick="remove_mon_object({{project_id}},{{monitoring_id}},{{seller_self_id}}, {{product.id}}, '{{product.name}}', 'self', '{{remove_url}}', '{{redirect_url}}')">
-                            Delete
-                        </button>
-                        {% endif %}
-                    </td>
-                    {% endif %}
                     {% for _, seller in monitoring_sellers %}
                     <td>
                         {% set object_defined = pids_to_sids.get(product.id) and seller.id in pids_to_sids.get(product.id) %}
-                        <button id="setup_seller{{seller.id}}"
-                                 onclick="window.location.href =
-                                 '{{ url_for('monitorings.edit_monitoring_object', project_id=project_id, monitoring_id=monitoring_id, product_id=product.id, seller_id=seller.id) }}';">
-                         {% if object_defined  %}
-                            Edit
-                        {% else %}
-                            Create
-                        {% endif %}
-                        </button>
+                        <a id="setup_seller{{seller.id}}" class="btn btn-app"
+                        onclick="window.location.href =
+                        '{{ url_for('monitorings.edit_monitoring_object', project_id=project_id, monitoring_id=monitoring_id, product_id=product.id, seller_id=seller.id) }}';"
+                        ><i class="fa fa-cogs"></i>{% if object_defined %}Edit{% else %}Create{% endif %}</a>
                         {% if object_defined  %}
-                        <button id="remove_seller{{seller.id}}"
-                                 onclick="remove_mon_object({{project_id}},{{monitoring_id}},{{seller.id}},{{product.id}}, '{{product.name}}', '{{seller.name}}', '{{remove_url}}', '{{redirect_url}}')">
-                            Delete
-                        </button>
+                            <a id="remove_seller{{seller.id}}" class="btn btn-app"
+                            onclick="remove_mon_object({{project_id}},{{monitoring_id}},{{seller.id}},{{product.id}}, '{{product.name}}', '{{seller.name}}', '{{remove_url}}', '{{redirect_url}}')"
+                            ><i class="fa fa-trash"></i>Delete</a>
                         {% endif %}
                     </td>
                     {% endfor %}
@@ -90,6 +78,13 @@
                     {% endfor %}
                 </tr>
             </tfoot>
-        </table>
-    {% endif %}
+                </table>
+            {% endif %}
+            </div>
+        </div>
+    </div>
+</div>
+{% endblock %}
+{% block javascripts %}
+    <script src="/static/js/monitoring_view_callbacks.js"></script>
 {% endblock %}
