--- a/templates/nav_edit_bar.html
+++ b/templates/nav_edit_bar.html
@@ -1,6 +1,6 @@
 <li>
-    <a class="btn btn-app" onclick="window.location.href = '{{ entity_view_url }}';"><i class="fa fa-bar-chart"></i>Cancel</a>
+    <a class="btn btn-app" onclick="window.location.href = '{{ entity_view_url }}';"><i class="fa fa-close"></i>Cancel</a>
 </li>
 <li>
-    <a id="save_entity" onclick="submit_form(document.getElementById('save_entity_form'))" class="btn btn-app" ><i class="fa fa-bar-chart"></i>Save</a>
+    <a id="save_entity" onclick="submit_form(document.getElementById('save_entity_form'))" class="btn btn-app" ><i class="fa fa-save"></i>Save</a>
 </li>
