--- a/templates/parser/test_parser_view.html
+++ b/templates/parser/test_parser_view.html
@@ -1,10 +1,11 @@
-
-
 {% extends 'base_site.html' %}
 {% block title %}
 Test Parser
 {% endblock title%}
 {% block navigation_bar %}
+<li>
+    <a href="{{ back_url }}" class="btn btn-app"><i class="fa fa-arrow-left"></i>Back</a>
+</li>
 <li>
     <a id="submit-parser-url" onclick="submit_form_check_js(document.getElementById('parser_url_form'))" class="btn btn-app"><i class="fa fa-bar-chart"></i>Run Test</a>
 </li>
