--- a/templates/project/create_project.html
+++ b/templates/project/create_project.html
@@ -1,22 +1,37 @@
-{% extends 'base.html' %}
-{% block horizontal_pane %}
-    <div class="button-grp-horizontal">
-        <p class="left">{{ current_user }}</p>
-        <div id="head_buttons_view" class="right" style="width: 50%">
-            <button id="save_project" class="btn-horizontal default right">Save</button>
-            <button id="cancell" class="btn-horizontal default right" onclick="window.location.href = '{{ url_for('projects.main_form') }}';">Cancel</button>
-        </div>
-    </div>
+{% extends 'base_site.html' %}
+{% block title %}
+Create Project
+{% endblock title%}
+{% block navigation_bar %}
+    <li>
+        <a class="btn btn-app" href="{{ url_for('projects.main_form') }}"><i class="fa fa-close"></i>Cancel</a>
+    </li>
+    <li>
+        <a id="save_project" class="btn btn-app" ><i class="fa fa-save"></i>Save</a>
+    </li>
 {% endblock %}
 {% block breadcrumbs %}
-    {% include 'breadcrumbs_list.html' %}
+    {% include 'breadcrumb_list_new.html' %}
 {% endblock %}
-{% block page_content %}
-    <div id="current_view" class="brdr">
-        <form id="project_name_form" method="POST" action="{{ url_for('projects.create_project') }}">
-        {{ form.csrf_token }}
-        {{ form.name.label }}
-        {{ form.name }}
-        </form>
+{% block content %}
+<div class="row">
+    <div class="col-md-6">
+        <div class="box box-primary">
+            <form id="project_name_form" method="post" enctype="multipart/form-data" role="form" action="{{ url_for('projects.create_project') }}">
+                {{ form.csrf_token }}
+                <div class="box-body">
+                    <div class="form-group">
+                        <label id="project_name_label" for="project_name_input">Product Name</label>
+                        <input class="form-control" name="project_name" id="project_name_input" type="text">
+                    </div>
+                </div>
+            </form>
+        </div>
     </div>
+</div>
 {% endblock %}
+{% block javascripts %}
+    <script src="/static/js/common.js"></script>
+{% endblock %}
+
+
