--- a/templates/login.html
+++ b/templates/login.html
@@ -1,17 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Login</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel='icon' href='/static/favicon.ico' type='image/x-icon'/ >
+
+  <title>{% block title %} {% endblock title%}</title>
+
+  <!-- Tell the browser to be responsive to screen width -->
+  <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+  <!-- Bootstrap 3.3.7 -->
+  <link rel="stylesheet" href="/static/libs/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/static/libs/bootstrap/css/dataTables.bootstrap.min.css">
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="/static/libs/font-awesome/css/font-awesome.min.css">
+  <!-- Ionicons -->
+  <link rel="stylesheet" href="/static/styles/ionicons.min.css">
+  <!-- Theme style -->
+  <link rel="stylesheet" href="/static/styles/adminlte.min.css">
+  <!-- AdminLTE Skins. Choose a skin from the css/skins
+       folder instead of downloading all of them to reduce the load. -->
+  <link rel="stylesheet" href="/static/styles/_all-skins.min.css">
+
+  <link rel="stylesheet" href="/static/styles/breadcrumb_overlay.css">
+
+  <!-- Specific CSS goes HERE -->
+  {% block stylesheets %}{% endblock stylesheets %}
+
 </head>
-<body>
-    <form method="POST" action="{{ url_for('login_page') }}">
+<body class="hold-transition login-page">
+<div class="login-box">
+    <div class="login-logo">
+        <b>Gay</b>Stuff
+    </div>
+    <div class="login-box-body">
+        <form method="POST" action="{{ url_for('login_page') }}">
         {{ form.csrf_token }}
-        {{ form.username.label }}
-        {{ form.username }}
-        {{ form.password.label }}
-        {{ form.password }}
-    <input type="submit" value="Submit">
-</form>
+            <div class="form-group">
+                <input class="form-control" name="username" placeholder="Login">
+            </div>
+            <div class="form-group">
+                <input class="form-control" name="password" type="password" placeholder="Password">
+            </div>
+        <div class="row">
+            <div class="col-xs-4">
+                <button class="btn btn-primary btn-block btn-flat" type="submit">Sign In</button>
+            </div>
+        </div>
+        </form>
+    </div>
+</div>
+  {% include "base_scripts.html" %}
 </body>
-</html>
