--- a/templates/project/project_settings.html
+++ b/templates/project/project_settings.html
@@ -21,7 +21,7 @@ Edit Project
                 {{ form.csrf_token }}
                 <div class="box-body">
                     <div class="form-group">
-                        <label id="project_name_label" for="project_settings_name_form">Product Name</label>
+                        <label id="project_name_label" for="project_settings_name_form">Project Name</label>
                         <input class="form-control" name="project_name" id="project_name_input" type="text" value="{{project_name}}">
                     </div>
                 </div>
