--- a/templates/sidebar_entities.html
+++ b/templates/sidebar_entities.html
@@ -19,7 +19,7 @@
     </a>
 </li>
 <li>
-    <a id="reports_menu" href="">
+    <a id="reports_menu" href="{{ url_for('reports.reports_view', project_id=project_id) }}">
         <i class="fa fa-envelope"></i> <span>Reports</span>
     </a>
 </li>
