--- a/templates/monitoring/edit_monitoring_object.html
+++ b/templates/monitoring/edit_monitoring_object.html
@@ -22,9 +22,9 @@ Edit Monitoring
     <div class="col-md-6">
     <div class="box box-primary">
         <div class="box-header">
-            <h3 class="box-title">Product Name</h3>
+            <h3 class="box-title"><b>Product Name</b></h3>
         </div>
-        <div class="box-body">
+        <div class="box-body text-center">
             <span id="product_name" value={{product.id}}><h4>{{product.name}}</h4></span>
         </div>
     </div>
@@ -35,9 +35,9 @@ Edit Monitoring
     <div class="col-md-6">
     <div class="box box-primary">
         <div class="box-header">
-            <h3 class="box-title">Seller Name</h3>
+            <h3 class="box-title"><b>Seller Name</b></h3>
         </div>
-        <div class="box-body">
+        <div class="box-body text-center">
             <span id="seller_name" value="{{seller.id}}"><h4>{{seller.name}}</h4></span>
         </div>
     </div>
@@ -48,7 +48,7 @@ Edit Monitoring
     <div class="col-xs-12">
         <div class="box box-primary">
             <div class="box-header">
-                <h3 class="box-title">Parser Configuration</h3>
+                <h3 class="box-title"><b>Parser Configuration</b></h3>
             </div>
             <div class="box-body">
                 <div class="form-group">
