--- a/templates/monitoring/monitoring_view_flat.html
+++ b/templates/monitoring/monitoring_view_flat.html
@@ -16,11 +16,12 @@ Edit Monitoring
 <div class="row">
     <div class="col-xs-12">
         <div class="box box-primary">
-            <div class="box-body">
+            <div class="box-body" style="overflow-x: auto">
             {% if not monitoring_products %}
                 NO ENTITIES CREATED
             {% else %}
-                <table id="monitored_products" class="table table-bordered table-striped text-center">
+                <table id="monitored_products" class="table table-striped table-bordered table-sm text-center" cellspacing="0"
+  width="100%">
                     <thead>
                         <tr>
                         <th>Product</th>
