latest stable version

--- a/static/styles/detail_control.css
+++ b/static/styles/detail_control.css
@@ -35,3 +35,8 @@ tr.shown td.details-control {
     position: relative;
     cursor: pointer;
 }
+
+#report_data td {
+    width: 1px;
+    white-space: nowrap;
+}
