--- a/templates/common_table_view.html
+++ b/templates/common_table_view.html
@@ -5,7 +5,7 @@
         {% if not entities %}
             NO ENTITIES CREATED
         {% else %}
-            <table id="example" class="table table-bordered table-striped text-center">
+            <table id="example" class="table table-bordered table-striped text-center" width="100%">
             <thead>
                 <tr>
                     <th>Name</th>
