--- a/templates/login.html
+++ b/templates/login.html
@@ -31,7 +31,7 @@
 <body class="hold-transition login-page">
 <div class="login-box">
     <div class="login-logo">
-        <b>Gay</b>Stuff
+        <b>Price</b>Monitoring
     </div>
     <div class="login-box-body">
         <form method="POST" action="{{ url_for('login_page') }}">
