--- a/templates/parser/test_parser_view.html
+++ b/templates/parser/test_parser_view.html
@@ -18,7 +18,7 @@ Test Parser
     <div class="col-xs-12">
         <div class="box box-primary">
             <div class="box-body">
-                <div class="form-group">
+                <div id="text_container" class="form-group">
                     <form id="parser_url_form" method="post" action="{{ submit_url }}">
                         {{ form.csrf_token }}
                         <label id="url-parser" for="url-for-parser"><b>URL:</b></label>
