--- a/templates/project/projects.html
+++ b/templates/project/projects.html
@@ -20,7 +20,7 @@ Projects View
     {% if not projects %}
         NO PROJECTS CREATED
     {% else %}
-    <table id="example" class="table table-bordered table-striped text-center">
+    <table id="example" class="table table-bordered table-striped text-center" style="overflow: auto" width="100%">
             <thead>
                 <tr>
                     <th>Name</th>
