--- a/templates/sidebar_entities.html
+++ b/templates/sidebar_entities.html
@@ -23,3 +23,9 @@
         <i class="fa fa-envelope"></i> <span>Reports</span>
     </a>
 </li>
+<li>
+    <a id="scan_stats" href="{{ url_for('show_scan_stats') }}">
+        <i class="fa fa-search-plus"></i> <span>Scan stats</span>
+    </a>
+</li>
+
