--- a/static/styles/monitoring_mgmt.css
+++ b/static/styles/monitoring_mgmt.css
@@ -1,3 +1,7 @@
+.select2-selection__placeholder { color: white !important; }
+.select2-selection__arrow { color: white !important; }
+.select2-selection--single { height: 100%; }
+
 .dropbtn {
   background-color: #3498DB;
   color: white;
@@ -6,6 +10,7 @@
   border: none;
   cursor: pointer;
   display: block;
+  min-width: 150px;
 }
 
 .dropbtn:hover, .dropbtn:focus {
