--- a/templates/base_site.html
+++ b/templates/base_site.html
@@ -32,11 +32,11 @@
 <div class="wrapper">
     <header class="main-header">
     <!-- Logo -->
-    <a href="index2.html" class="logo">
+    <a class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
-      <span class="logo-mini"><b>G</b>AY</span>
+      <span class="logo-mini"><b>P</b>M</span>
       <!-- logo for regular state and mobile devices -->
-      <span class="logo-lg"><b>Gay</b>Stuff</span>
+      <span class="logo-lg"><b>Price</b>Monitoring</span>
     </a>
     <!-- Header Navbar: style can be found in header.less -->
     <nav class="navbar navbar-static-top">
@@ -67,6 +67,6 @@
 
   <!-- Specific JS goes HERE -->
   {% block javascripts %}{% endblock %}
-
 </body>
+<footer class="footer"><span>Level<b> /b/ </b>Tech LTD</span></footer>
 </html>
