--- a/templates/report/edit_report.html
+++ b/templates/report/edit_report.html
@@ -22,7 +22,7 @@ Reports View
 {% endblock %}
 {% block content %}
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
         <div class="box box-primary">
             <form id="report_name" method="post" enctype="multipart/form-data" role="form">
                 <div class="box-body">
@@ -35,7 +35,7 @@ Reports View
         </div>
     </div>
 
-    <div class="col-sm-4 col-md-2">
+    <div class="col-xs-12 col-sm-10 col-md-4 col-lg-2">
         <div class="box box-primary">
             <div class="box-body">
                 <label for="monitoring_select"><b>Monitoring:</b></label>
