--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -4,9 +4,9 @@
     <!-- sidebar: style can be found in sidebar.less -->
     <section class="sidebar">
       <!-- Sidebar user panel -->
-      <div class="user-panel">
+      <div style="margin-top: 10px" class="user-panel">
         <div class="pull-left image">
-          <img src="/static/images/rambie.jpg" class="img-circle" alt="User Image">
+          <img style="height: 45px" src="{{ url_for('settings.user_avatar') }}" class="img-circle" alt="User Image">
         </div>
         <div class="pull-left info">
           <p>
@@ -26,14 +26,19 @@
         {% if project_id %}
           {% include "sidebar_entities.html" %}
         {% endif %}
-        <li>
-          <a id="scan_stats" href="{{ url_for('show_scan_stats') }}">
-            <i class="fa fa-search-plus"></i> <span>Scan stats</span>
-          </a>
-        </li>
         <li class="header"></li>
-        <li><a href="/logout"><i class="fa fa-circle-o text-red"></i> <span>Logout</span></a></li>
+        <li>
+            <a id="profile_settings" href="{{ url_for('settings.profile_settings') }}">
+                <i class="fa fa-cogs"></i> <span>Profile settings</span>
+            </a>
+        </li>
+        <li>
+            <a href="/logout"><i class="fa fa-circle-o text-red"></i>
+                <span>Logout</span>
+            </a>
+        </li>
       </ul>
     </section>
     <!-- /.sidebar -->
   </aside>
+
